Header: fixed z-index to make sure body elements go behind the float

--- a/src/scss/grommet-core/_objects.header.scss
+++ b/src/scss/grommet-core/_objects.header.scss
@@ -74,6 +74,9 @@ header.#{$grommet-namespace}header--primary {
         position: fixed;
       }
     }
+    .#{$grommet-namespace}drop {
+       z-index: 51 !important;
+    }
   }
 }
 
